prevent video hover clipping in safari

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -275,6 +275,10 @@
  user-select: none;
  position: relative;
  overflow: hidden;
+ -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
  border-radius: 1.5maj;
  box-shadow: var(--med-shadow);
  height: 100%;
